[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.88"
serde_derive = "1.0.148"
serde = "1.0.148"
reqwest = "0.11.13"
tokio = { version = "1.22.0", features = ["full"] }